--- a/FAQ.html
+++ b/FAQ.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>FAQ</title>
@@ -44,7 +43,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -105,7 +104,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
 
     <section id="forum">
@@ -142,13 +141,13 @@
             </div>
         </div>
     </section>
-    <section id="content">
+    <div id="content">
         <div class="container-fluid">
             <div class="col-sm-12 bg">
                 <p>?Ahora encontrar un socio es muy simple! Todos los usuarios registrados en forex spain forum pueden disfrutar de un nuevo servicio del portal de operaciones Forex forex-spain.com: 'Invita a un amigo'. Este servicio logra que las invitaciones por correo sean mas simples, por lo que se incrementa el numero de referidos potenciales. Para poder llegar a ser un referido, un invitado debe simplemente seguir su enlace de socio que puede encontrar en la pestana de su perfil 'Estadisticas del Socio' y registrarse en el foro. Dichas redes sociales populares, como Facebook, Twitter, etc tambien estan disponibles como listas de contacto. Para enviar una invitacion, necesita completar el formulario en la seccion 'Invita a un amigo'. Su elance de referido se </p>
             </div>
         </div>
-    </section>
+    </div>
     <!--Content part ends-->
     <section id="search">
         <div class="container-fluid">
@@ -182,7 +181,7 @@
                                     <h4>Search Word Or Words</h4>
                                     <div class="col-sm-2"></div>
                                     <div class="col-sm-8 col-xs-12">
-                                        <form action="">
+                                        <form action="#">
                                             <div class="form-group">
                                                 <input type="email" class="form-control" placeholder="Search Here...">
                                             </div>
