--- a/catch.html
+++ b/catch.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +125,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: myraid_bold;color: #404a57;padding: 0px 0px;text-align: right;">Catch_Forex</h6></a>
@@ -161,13 +161,13 @@
             </div>
         </div>
     </section>
-    <section id="catch">
+    <div id="catch">
         <div class="container-fluid">
             <div class="col-sm-12 bg">
                 <p>En esta sección, le presentamos un rápido juego elaborado por InstaForex: Forex Hunting Trader. Si desea estar en los zapatos de un operador y así probar su atención y precisión, este apasionante juego es para usted. Para conseguir la puntuación más alta, tiene que tomar decisiones rápidamente y disparar a los toros, osos, e incluso a operadores competidores que de repente salen de los arbustos y empiezan a correr. Sólo los operadores profesionales pueden mantener la calma sin perder control. ¡Juegue y gane con InstaForex! </p>
             </div>
         </div>
-    </section>
+    </div>
     <!--Content part ends-->
     <footer>
         <div class="container-fluid">
