--- a/forex_market_key.html
+++ b/forex_market_key.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +125,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <div class="container-fluid">
