--- a/invite.html
+++ b/invite.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +125,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: myraid_reg;color: #404a57;padding: 0px 0px;text-align: right;">Invite Friends</h6></a>
