--- a/posts.html
+++ b/posts.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Today's Post</title>
@@ -64,7 +63,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +124,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <div class="container-fluid">
