--- a/quick_links.html
+++ b/quick_links.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +125,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum_links">
         <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: myraid_reg;color: #565656;padding: 0px 0px;text-align: right; font-weight: 600;">Show Groups</h6></a>
@@ -252,7 +252,7 @@
         </div>
     </section>
     <!--Popular part ends-->
-    <section id="thread_links">
+    <div id="thread_links">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12">
@@ -302,7 +302,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!--thread part ends-->
     <footer>
         <div class="container-fluid">
