--- a/daily_events.html
+++ b/daily_events.html
@@ -63,7 +63,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -124,7 +124,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: poppin_medium;color: #106be3;padding: 0px 0px;text-align: right;">Daily Events</h6></a>
