--- a/game.html
+++ b/game.html
@@ -62,7 +62,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -123,7 +123,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
         <section id="forum">
            <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: myraid_reg;color: #787878;padding: 0px 0px;text-align: right;">Forex Game</h6></a>
