--- a/site_leaders.html
+++ b/site_leaders.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!--Header part ends-->
-    <section id="menu">
+    <div id="menu">
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-default">
@@ -125,7 +125,7 @@
                 </nav>
             </div>
         </div>
-    </section>
+    </div>
     <!--menu part ends-->
     <section id="forum">
         <a href="#"><h6 class="r-top" style="text-align: right;margin-right: 19px;font-size: 16px;font-family: myraid_bold;color: #404a57;padding: 0px 0px;text-align: right;">Show Groups</h6></a>
@@ -140,7 +140,7 @@
         </div>
     </section>
     <!--forum part ends-->
-    <section id="invite_leaders">
+    <div id="invite_leaders">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <section id="content_leaders">
         <div class="container-fluid">
             <div class="col-sm-12 bg rows">
